--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}
+    
   </h1>
 </div>
 
@@ -9,21 +9,22 @@
 
 
 <div class="mat-app-background">
-<button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-  <mat-icon>more_vert</mat-icon>
+<div class="title">Welcome to the {{ title }}</div>
+<button mat-icon-button [matMenuTriggerFor]="menu" aria-label="icon-button with a menu">
+  <mat-icon>list</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
   <button mat-menu-item>
-    <mat-icon>dialpad</mat-icon>
-    <span>Redial</span>
-  </button>
-  <button mat-menu-item disabled>
-    <mat-icon>voicemail</mat-icon>
-    <span>Check voice mail</span>
+    <mat-icon>home</mat-icon>
+    <span>Home</span>
   </button>
   <button mat-menu-item>
-    <mat-icon>notifications_off</mat-icon>
-    <span>Disable alerts</span>
+    <mat-icon>assignment</mat-icon>
+    <span>About</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>help</mat-icon>
+    <span>Help</span>
   </button>
 </mat-menu>
 </div>
