--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -5,3 +5,8 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+  .title {
+    text-align: center;
+    padding-left: 40%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
