--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -19,7 +19,7 @@
     </mat-menu>
       <span class="title">Welcome to the {{title}}</span>
       <span class="example-spacer"></span>
-      <button mat-icon-button [matMenuTriggerFor]="modal" aria-label="icon-button with a menu">
+      <button mat-icon-button aria-label="icon-button with a menu">
           <mat-icon>person_add</mat-icon>
         </button>
   </mat-toolbar>
