--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,9 @@
 <div class="mat-app-background">
   <mat-toolbar color="primary">    
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="icon-button with a menu">
+    <button mat-icon-button
+     [matMenuTriggerFor]="menu"
+      aria-label="icon-button with a menu"
+      matTooltip="Visit different Pages Through Routing">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
