--- a/src/app/add-patient/add-patient-dialog.component.html
+++ b/src/app/add-patient/add-patient-dialog.component.html
@@ -1,20 +1,20 @@
 <h1 mat-dialog-title> Add New Patient:</h1>
 <div mat-dialog-content>
-  <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" class="example-form">
+  <form [formGroup]="form" class="example-form" style="height: 400px;">
     <mat-form-field class="example-full-width">
-      <input [(ngModel)]="data.firstname" name="firstName" matInput placeholder="First Name">
+      <input formControlName="firstname" name="firstName" matInput placeholder="First Name">
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
-      <input [(ngModel)]="data.lastname" name="lastName" matInput placeholder="Last Name">
+      <input formControlName="lastname" name="lastName" matInput placeholder="Last Name">
     </mat-form-field>
+    <div mat-dialog-actions>
+        <button mat-button (click)="onNoClick()">No Thanks</button>
+        <button mat-button (click)="onSubmit(form.value)" [mat-dialog-close] cdkFocusInitial>Ok</button>
+      </div>
   </form>
-  {{data.firstname}} (coming from interface, to be changed to input)
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button type="submit" [mat-dialog-close] cdkFocusInitial>Ok</button>
-</div>
+
 
 <!-- Copyright 2019 Google Inc. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
