--- a/src/app/add-patient/add-patient-dialog.component.html
+++ b/src/app/add-patient/add-patient-dialog.component.html
@@ -1,16 +1,31 @@
 <h1 mat-dialog-title> Add New Patient:</h1>
 <div mat-dialog-content>
-  <form [formGroup]="form" class="example-form" style="height: 400px;">
-    <mat-form-field class="example-full-width">
+  <form [formGroup]="form" class="example-form" style="height: 400px;"> 
+    <mat-form-field style="width:50%">
       <input formControlName="firstname" name="firstName" matInput placeholder="First Name">
     </mat-form-field>
-  
-    <mat-form-field class="example-full-width">
+    <mat-form-field style="width:50%">
       <input formControlName="lastname" name="lastName" matInput placeholder="Last Name">
     </mat-form-field>
+    <mat-checkbox (click)="activate()" formControlName="examined" name="examined" labelPosition="before">Check if patient has been examined:</mat-checkbox>
+
+    <mat-form-field style="width:100%" [hidden]="!checked">
+        <input matInput formControlName="date" [matDatepicker]="picker" placeholder="Choose a date">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    <mat-form-field style="width:100%">
+      <input formControlName="diagnosis" name="diagnosis" matInput placeholder="Diagnosis">
+    </mat-form-field>
+    <mat-form-field style="width:100%;">
+      <input formControlName="notes" name="notes" matInput placeholder="Any Additional Notes?">
+    </mat-form-field>
+
+
+
     <div mat-dialog-actions>
-        <button mat-button (click)="onNoClick()">No Thanks</button>
-        <button mat-button (click)="onSubmit(form.value)" [mat-dialog-close] cdkFocusInitial>Ok</button>
+        <button mat-button (click)="onNoClick()">Cancel</button>
+        <button mat-button (click)="onSubmit(form.value)" [mat-dialog-close] cdkFocusInitial>Submit</button>
       </div>
   </form>
 </div>
