--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 /* @import "~@angular/material/prebuilt-themes/pink-bluegrey.css"; */
 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+[hidden] { display: none !important;}
