--- a/src/app/add-patient/add-patient-dialog.component.html
+++ b/src/app/add-patient/add-patient-dialog.component.html
@@ -2,14 +2,15 @@
 <div mat-dialog-content>
   <form [formGroup]="form" class="example-form" style="height: 400px;"> 
     <mat-form-field style="width:50%">
+        <div style="color:red;" *ngIf="form.get('firstname').hasError('pattern')">Detected some invalid characters</div>
       <input formControlName="firstname" name="firstName" matInput placeholder="First Name">
     </mat-form-field>
     <mat-form-field style="width:50%">
+        <div style="color:red;" *ngIf="form.get('lastname').hasError('pattern')">Detected some invalid characters</div>
       <input formControlName="lastname" name="lastName" matInput placeholder="Last Name">
     </mat-form-field>
-    <mat-checkbox (click)="activate()" formControlName="examined" name="examined" labelPosition="before">Check if patient has been examined:</mat-checkbox>
-
-    <mat-form-field style="width:100%" [hidden]="!checked">
+    <mat-checkbox [(ngModel)]="checked" formControlName="examined" name="examined" labelPosition="before">Check if patient has been examined:</mat-checkbox>
+    <mat-form-field style="width:100%" *ngIf="checked">
         <input matInput formControlName="date" [matDatepicker]="picker" placeholder="Choose a date">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -20,17 +21,9 @@
     <mat-form-field style="width:100%;">
       <input formControlName="notes" name="notes" matInput placeholder="Any Additional Notes?">
     </mat-form-field>
-
-
-
     <div mat-dialog-actions>
         <button mat-button (click)="onNoClick()">Cancel</button>
-        <button mat-button (click)="onSubmit(form.value)" [mat-dialog-close] cdkFocusInitial>Submit</button>
+        <button [disabled]="!form.valid" mat-button (click)="onSubmit(form.value)" [mat-dialog-close] cdkFocusInitial>Submit</button>
       </div>
   </form>
 </div>
-
-
-<!-- Copyright 2019 Google Inc. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
