added cards. UI ready for database implementation
connecting to firebase next

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
 <app-toolbar></app-toolbar>
+<mat-grid-list cols="4" rowHeight="2:1">
+        <mat-grid-tile>
+                <app-patient-card></app-patient-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+                <app-patient-card></app-patient-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+                <app-patient-card></app-patient-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+                <app-patient-card></app-patient-card>
+        </mat-grid-tile>
+      </mat-grid-list>
+
 <router-outlet></router-outlet>
