data working with firebase both ways.

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 [hidden] { display: none !important;}
+
+.mat-figure {
+    display: block !important;
+}
