--- a/src/app/add-patient/add-patient-dialog.component.html
+++ b/src/app/add-patient/add-patient-dialog.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
     <mat-checkbox [(ngModel)]="checked" formControlName="examined" name="examined" labelPosition="before">Check if patient has been examined:</mat-checkbox>
     <mat-form-field style="width:100%" *ngIf="checked">
-        <input matInput formControlName="date" [matDatepicker]="picker" placeholder="Choose a date">
+        <input matInput formControlName="examinedOn" [matDatepicker]="picker" placeholder="Choose a date">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
