--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -7,15 +7,15 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button routerLink="/" mat-menu-item>
         <mat-icon>home</mat-icon>
         <span>Home</span>
       </button>
-      <button mat-menu-item>
+      <button routerLink="/about" mat-menu-item>
         <mat-icon>assignment</mat-icon>
         <span>About</span>
       </button>
-      <button mat-menu-item>
+      <button routerLink="/help" mat-menu-item>
         <mat-icon>help</mat-icon>
         <span>Help</span>
       </button>
