implemented delete method

--- a/src/app/patient-card/patient-card.component.html
+++ b/src/app/patient-card/patient-card.component.html
@@ -14,7 +14,7 @@
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>Edit</button>
-          <button style="color:red"mat-button>Delete</button>
+          <button (click)="onDelete(patient)" style="color:red"mat-button>Delete</button>
         </mat-card-actions>
       </mat-card>
 </div>
