--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="4" >
+<mat-grid-list rowHeight=350px cols="4" >
     <mat-grid-tile *ngFor="let patient of patients | async" >        
     <app-patient-card [patient]="patient" ></app-patient-card>
     </mat-grid-tile>
