--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,12 @@
-<p>about works!</p>
+<div class='container'>
+<h3>Usage: You can use this doctor-app to track your patient's data using a real time database.</h3>
+<h3>Technologies:
+    <li>Angular for a front-end: Angular material library</li> 
+    <li>Google Firebase for back-end: firebase hosting and cloud firestore</li>
+</h3>
+<h3>Repository: <a href="https://github.com/Marwan01/doctor-app">here</a></h3>
+<h3>Project Repo: <a href="https://github.com/Marwan01/doctor-app/projects/1"> here</a></h3>
+<h3></h3>
+<h3>Author: Marouen Helali</h3>
+<img matTooltip="Click me!" class="pic" [src]="link" (click)="ImageClick()" alt="Photo of Mar">
+</div>
