--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -5,9 +5,7 @@
     width: 50%;
   }
 
-  .container {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-  }
+
 
   .pic {
     display: block;
@@ -16,4 +14,8 @@
     width: 50%;
     max-width: 200px;
     max-height: 200px;
+  }
+
+  .top {
+    width: 100%;
   }
