--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button
      [matMenuTriggerFor]="menu"
       aria-label="icon-button with a menu"
-      matTooltip="Visit different Pages Through Routing">
+      matTooltip="Checkout the other pages for more info!">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
