--- a/src/app/patient-card/patient-card.component.html
+++ b/src/app/patient-card/patient-card.component.html
@@ -13,7 +13,7 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>Edit</button>
+          <app-edit-patient [cp]="patient"></app-edit-patient>
           <button (click)="onDelete(patient)" style="color:red"mat-button>Delete</button>
         </mat-card-actions>
       </mat-card>
