--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -20,7 +20,7 @@
         <span>Help</span>
       </button>
     </mat-menu>
-      <span class="title">Welcome to the {{title}}</span>
+      <span class="title">Welcome to {{title}}</span>
       <span class="example-spacer"></span>
       <app-add-patient>loading</app-add-patient>
   </mat-toolbar>
