implemented damn update and thus finished CRUD using firestore and Angular

--- a/src/app/edit-patient/edit-patient-dialog.component.html
+++ b/src/app/edit-patient/edit-patient-dialog.component.html
@@ -18,8 +18,9 @@
     <mat-form-field style="width:100%">
       <input formControlName="diagnosis" name="diagnosis" matInput placeholder="Diagnosis">
     </mat-form-field>
+    <div style="color:coral;">A note is necessary to edit a patient.</div> 
     <mat-form-field style="width:100%;">
-      <input formControlName="notes" name="notes" matInput placeholder="Any Additional Notes?">
+      <input formControlName="notes" name="notes" matInput placeholder="Add an Edit Note Here">
     </mat-form-field>
     <div mat-dialog-actions>
         <button mat-button (click)="onNoClick()">Cancel</button>
