--- a/src/app/edit-patient/edit-patient.component.html
+++ b/src/app/edit-patient/edit-patient.component.html
@@ -1,5 +1,6 @@
 <button mat-icon-button
  (click)="openDialog()"
+ (click) ="saveSender(cp)"
   aria-label="icon-button with a menu"
   matTooltip="Click here to edit a patient">
   <mat-icon>edit</mat-icon>
