--- a/src/app/patient-card/patient-card.component.html
+++ b/src/app/patient-card/patient-card.component.html
@@ -8,7 +8,7 @@
         <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
         <mat-card-content>
           <b>Diagnosis: {{patient.diagnosis}}</b>
-          <p>
+          <p class = "notes">
               {{patient.notes}}
           </p>
         </mat-card-content>
