--- a/src/app/patient-card/patient-card.component.css
+++ b/src/app/patient-card/patient-card.component.css
@@ -1,8 +1,15 @@
 .mat-app-background {
     padding: 2vh;
     display: block;
+    width: inherit;
+    height: inherit;
+
 }
 
 .notes {
     display: block;
 }
+
+ mat-card {
+    height: 300px;
+  }
