fixed date issue for the millionth time lol

--- a/src/app/patient-card/patient-card.component.html
+++ b/src/app/patient-card/patient-card.component.html
@@ -5,7 +5,10 @@
           <mat-card-title>{{patient.firstname}} {{patient.lastname}}</mat-card-title>
 
           <!-- TODO: fix this date conversion problem -->
-          <mat-card-subtitle *ngIf="patient.examinedOn">{{patient.examinedOn.seconds * 1000 | date}}</mat-card-subtitle>
+          <span *ngIf="patient.examinedOn">
+            <mat-card-subtitle *ngIf="patient.examinedOn">{{patient.examinedOn.seconds | date:'dd/MM/yyyy'}}</mat-card-subtitle>
+          </span>
+          
         </mat-card-header>
         <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
         <mat-card-content>
